--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -4,7 +4,9 @@ title: "Teaching"
 permalink: /teaching/
 author_profile: true
 ---
-
+- Conduct problem-solving and review sessions for undergraduate mathematics courses.  
+- Support student learning in calculus, linear algebra, and applied mathematics.  
+- Assist with exam preparation and reinforce lecture material through active learning.
 {% include base_path %}
 
 {% for post in site.teaching reversed %}
